--- a/timo-web-interface/src/App.css
+++ b/timo-web-interface/src/App.css
@@ -3,19 +3,13 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
+  min-height: 35vmin;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +18,50 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.accountBalance {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+body{
+	background-color: #ffffff;
+	font-family: 'Noto Sans', sans-serif;
 }
+.card{
+	border: none;
+	border-radius: 10px;
+	width: 275px;
+	margin-top: 20%;
+}
+
+.text-dark{
+	font-weight: bold;
+	margin-top: 8px;
+	font-size: 13px;
+	letter-spacing: 0.5px;
+}
+.card-bottom{
+	background: #3E454D;
+	border-radius: 6px;
+}
+.flex-column{
+	color: #adb5bd;
+	font-size: 13px;
+}
+.flex-column p{
+	letter-spacing: 1px;
+	font-size: 18px;
+}
+.btn-secondary{
+	height: 40px!important;
+	margin-top: 3px;
+}
+.btn-secondary:focus{
+	box-shadow: none;
+}
+
