--- a/timo-web-interface/src/App.css
+++ b/timo-web-interface/src/App.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(5, 5, 5);
 }
 
 .accountBalance {
